--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 											<p class="game__box-content-date">First Released Nov 17, 2014</p>
 										</div>
 										<div class="ba-width-1-3">
-											<div class="game__box-content-circle" id="divProgress"></div>
+											<div id="circle1" data-radius="80" class="game__box-content-circle"></div>
 										</div>
 									</div>
 									<div class="ba-row">
@@ -106,7 +106,7 @@
 											<p class="game__box-content-date">First Released Nov 17, 2014</p>
 										</div>
 										<div class="ba-width-1-3">
-											<div class="game__box-content-circle" id="divProgress"></div>
+											<div id="circle2" data-radius="20" class="game__box-content-circle"></div>
 										</div>
 									</div>
 									<div class="ba-row">
@@ -149,7 +149,7 @@
 											<p class="game__box-content-date">First Released Nov 17, 2014</p>
 										</div>
 										<div class="ba-width-1-3">
-											<div class="game__box-content-circle" id="divProgress"></div>
+											<div id="circle3" data-radius="50" class="game__box-content-circle"></div>
 										</div>
 									</div>
 									<div class="ba-row">
